# res-peer

./: .editorconfig  .gitignore  Cargo.toml  LitePaper.md  NOTICE  README.md  deploy-applications.sh  deploy-devnet.sh  deploy-genesis.sh  deploy-local-multichains.sh  deploy-local.sh  package.json  run_applications.sh  run_node_service.sh  run_service.sh  rust-toolchain.toml
.cargo/: config.toml
activity/: Cargo.toml
activity/src/: contract.rs  lib.rs  service.rs  state.rs
blob-gateway/: Cargo.toml
blob-gateway/src/: contract.rs  lib.rs  service.rs  state.rs
copilot/: Cargo.toml
copilot/src/: contract.rs  lib.rs  service.rs  state.rs
cp-registry/: Cargo.toml
cp-registry/src/: contract.rs  lib.rs  service.rs  state.rs
credit/: Cargo.toml
credit/src/: contract.rs  lib.rs  service.rs  state.rs
deploy/linera-application-k8s/: 00-strip-prefix.yaml  01-linera-application-pvc.yaml  02-linera-application.yaml  03-ingress.yaml
deploy/node-service-k8s/: 00-strip-prefix.yaml  01-node-service-pvc.yaml  02-node-service.yaml  03-ingress.yaml
feed/: Cargo.toml
feed/src/: contract.rs  lib.rs  service.rs  state.rs
foundation/: Cargo.toml
foundation/src/: contract.rs  lib.rs  service.rs  state.rs
illustrator/: Cargo.toml
illustrator/src/: contract.rs  lib.rs  service.rs  state.rs
illustrator/src/stable_diffusion/: attention.rs  clip.rs  ddim.rs  ddpm.rs  embeddings.rs  euler_ancestral_discrete.rs  mod.rs  resnet.rs  schedulers.rs  unet_2d.rs  unet_2d_blocks.rs  utils.rs  vae.rs
market/: Cargo.toml
market/src/: contract.rs  lib.rs  service.rs  state.rs
review/: Cargo.toml
review/src/: contract.rs  lib.rs  service.rs  state.rs
script/: bin_to_safetensors.py
service/copilot/: Cargo.toml
service/copilot/src/: main.rs  t5.rs
service/copilot_service/: Cargo.toml
service/copilot_service/src/: t5.rs
service/illustrator/: Cargo.toml
service/illustrator/src/: main.rs  sd.rs
service/illustrator_service/: Cargo.toml
service/illustrator_service/src/: sd.rs
webui/: Dockerfile  package.json  quasar.config.js
webui/k8s/: 01-respeer-webui.yaml  02-ingress.yaml  kustomization.yaml
webui/public/tinymce/skins/content/dark/: content.js
webui/public/tinymce/skins/content/default/: content.js
webui/public/tinymce/skins/content/document/: content.js
webui/public/tinymce/skins/content/tinymce-5/: content.js
webui/public/tinymce/skins/content/tinymce-5-dark/: content.js
webui/public/tinymce/skins/content/writer/: content.js
webui/public/tinymce/skins/ui/oxide/: content.inline.js  content.js  skin.js  skin.shadowdom.js
webui/public/tinymce/skins/ui/oxide-dark/: content.inline.js  content.js  skin.js  skin.shadowdom.js
webui/public/tinymce/skins/ui/tinymce-5/: content.inline.js  content.js  skin.js  skin.shadowdom.js
webui/public/tinymce/skins/ui/tinymce-5-dark/: content.inline.js  content.js  skin.js  skin.shadowdom.js
webui/src/: index.template.html  shims-vue.d.ts  window.d.ts
webui/src/apollo/: index.ts
webui/src/assets/: index.ts
webui/src/boot/: inline-svg.ts  prime-vue.ts  vue-diff.ts
webui/src/components/: ActivitiesKeysQuery.vue  ActivitiesQuery.vue  ActivityApplicationsKeysQuery.vue  ActivityApplicationsQuery.vue  ActivityContent.vue  ActivityPage.vue  ActivityRegister.vue  ActivityVote.vue  ApplyReviewer.vue  ArticleList.vue  AssetApplicationsKeysQuery.vue  AssetApplicationsQuery.vue  AvatarSetting.vue  BlockSubscription.vue  CPNodeCard.vue  ChainQuery.vue  CollectionNftList.vue  ComputingNodesQuery.vue  ContentApplicationList.vue  ContentApplicationsKeysQuery.vue  ContentApplicationsQuery.vue  ContentCardView.vue  ContentCardViewV1.vue  ContentView.vue  CreateActivity.vue  CreditQuery.vue  DepositBalance.vue  FeedContentsKeysQuery.vue  FeedContentsQuery.vue  FeedView.vue  FoundationInfoQuery.vue  MarketCollectionsQuery.vue  MarketInfoQuery.vue  MintNFT.vue  NativeBalanceQuery.vue  RequestActivitySubscribe.vue  RequestApplication.vue  RequestCPRegistrySubscribe.vue  RequestCreditSubscribe.vue  RequestFeedSubscribe.vue  (+18 more)
webui/src/components/application/: RequestApplication.vue
webui/src/components/copilot/: DepositQuery.vue  GetQueryId.vue  ParagraphTask.vue
webui/src/components/dashboard/: ContentsPage.vue
webui/src/components/drawer/: MainDrawer.vue
webui/src/components/editor/: CPNodeSelector.vue  CopilotCompareText.vue  CopilotCoverDescription.vue  CopilotDepositQuery.vue  CopilotIllustrateDescription.vue  CopilotParagraphTask.vue  CopilotQueryId.vue  IllustrateCopilot.vue  TextCopilot.vue  TinymceEditor.vue
webui/src/components/footer/: MainFooter.vue
webui/src/components/header/: MainHeader.vue
webui/src/const/: index.ts
webui/src/css/: app.sass  quasar.variables.sass
webui/src/layouts/: MainLayout.vue
webui/src/pages/: ComputingProvidersPage.vue  DashboardPage.vue
webui/src/router/: routes.ts
webui/src/stores/: application.ts  content.ts  copilot.ts  cpregistry.ts  setting.ts  user.ts
webui/src/utils/: graphql_result.ts  hex.ts  index.ts  publickeytopwner.ts  shortid.ts
