[workspace]
members = [
    "credit",
    "feed",
    "market",
    "foundation",
    "review",
    "activity",
    "copilot"
]
resolver = "2"

[workspace.dependencies]
async-graphql = { version = "7.0.2", default-features = false }
async-trait = "0.1.77"
bcs = "0.1.6"
futures = "0.3.30"
linera-sdk = { version = "0.11.0", path = "../linera-protocol-respeer/linera-sdk" }
linera-views = { version = "0.11.0", path = "../linera-protocol-respeer/linera-views" }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
thiserror = "1.0.57"
cid = "0.10.1"
log = "0.4.21"
wasm-encoder = "0.24.1"
wasmer = { version = "=3.1.1", features = ["singlepass"] }
wasmer-middlewares = "3.1.1"
wasmparser = "0.101.1"
wasmtime = "1.0"
wit-bindgen-guest-rust = { version = "0.2.0", package = "linera-wit-bindgen-guest-rust" }
wit-bindgen-host-wasmer-rust = { version = "0.2.0", package = "linera-wit-bindgen-host-wasmer-rust" }
wit-bindgen-host-wasmtime-rust = { version = "0.2.0", package = "linera-wit-bindgen-host-wasmtime-rust" }
tokio-stream = "0.1.14"
tokio = "1.36.0"
futures-util = "0.3.28"
credit = { path = "./credit" }
feed = { path = "./feed" }
review = { path = "./review" }
foundation = { path = "./foundation" }
market = { path = "./market" }
copilot = { path = "./copilot" }
webassembly-test = "0.1.0"

[profile.release]
debug = true
lto = true
opt-level = 'z'
strip = 'debuginfo'

[profile.bench]
debug = true

[patch.crates-io.ed25519-dalek]
version = "2.1.1"
git = "https://github.com/respeer-ai/curve25519-dalek"
branch = "respeer-pub-field-1efe6a93"
