[workspace]
members = [
    "credit",
    "feed",
    "market",
    "foundation",
    "review",
    "activity",
    "copilot",
    "illustrator",
    "blob-gateway",
    "cp-registry",
    "service/copilot",
    "service/illustrator",
]
default-members = [
    "credit",
    "feed",
    "market",
    "foundation",
    "review",
    "activity",
    "copilot",
    "illustrator",
    "blob-gateway",
    "cp-registry",
]
resolver = "2"

[workspace.dependencies]
async-graphql = { version = "=7.0.2", default-features = false }
async-graphql-derive = { version = "=7.0.2", default-features = false }
async-trait = "0.1.77"
bcs = "0.1.6"
futures = "0.3.30"
linera-sdk = { version = "0.13.0", git = "https://github.com/linera-io/linera-protocol.git", rev = "v0.13.0" }
linera-views = { version = "0.13.0", git = "https://github.com/linera-io/linera-protocol.git", rev = "v0.13.0" }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
thiserror = "^1.0.65"
cid = "0.10.1"
log = "0.4.21"
tokio-stream = "0.1.14"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
futures-util = "0.3.28"
webassembly-test = "0.1.0"
candle-core = "0.6.0"
candle-transformers = "0.6.0"
candle-nn = "0.6.0"
getrandom = { version = "0.2.12", default-features = false, features = ["custom"] }
sha3 = "0.10.8"
tokenizers = { git = "https://github.com/christos-h/tokenizers", default-features = false, features = ["unstable_wasm"] }
rand = "0.8.5"
anyhow = { version = "1", features = ["backtrace"] }
hex = "0.4.3"
ed25519-dalek = { version = "2.1.1", features = ["batch", "serde"] }
image = { version = "0.25.2", default-features = false, features = ["jpeg", "png"] }
tracing = "0.1.40"
base64 = "0.13"

credit = { path = "./credit" }
feed = { path = "./feed" }
review = { path = "./review" }
foundation = { path = "./foundation" }
market = { path = "./market" }
copilot = { path = "./copilot" }
illustrator = { path = "./illustrator" }
blob-gateway = { path = "./blob-gateway" }
cp-registry = { path = "./cp-registry" }

[profile.release]
debug = true
lto = true
opt-level = 'z'
strip = true

[profile.bench]
debug = true

