[package]
name = "blob-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql = { workspace = true, default-features = false }
linera-views.workspace = true
linera-sdk.workspace = true
log.workspace = true
serde.workspace = true
anyhow.workspace = true
thiserror.workspace = true

[dev-dependencies]
linera-sdk = { workspace = true, features = ["test"] }

[[bin]]
name = "blob_gateway_contract"
path = "src/contract.rs"

[[bin]]
name = "blob_gateway_service"
path = "src/service.rs"

