[package]
name = "copilot"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql = { workspace = true, default-features = false }
linera-sdk.workspace = true
linera-views.workspace = true
candle-core.workspace = true
candle-transformers.workspace = true
getrandom.workspace = true
log.workspace = true
rand.workspace = true
serde.workspace = true
tokenizers.workspace = true
anyhow.workspace = true
serde_json.workspace = true
cp-registry.workspace = true
thiserror.workspace = true

[dev-dependencies]
linera-sdk = { workspace = true, features = ["test"] }

[[bin]]
name = "copilot_contract"
path = "src/contract.rs"

[[bin]]
name = "copilot_service"
path = "src/service.rs"

