[package]
name = "feed"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql = { workspace = true, default-features = false }
async-trait = { workspace = true }
bcs = { workspace = true }
futures = { workspace = true }
linera-sdk = { workspace = true }
linera-views = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
cid = { workspace = true }
log = { workspace = true }
credit = { workspace = true }
foundation = { workspace = true }
tokio-stream = { workspace = true }
tokio = { workspace = true }
futures-util = { workspace = true }

[dev-dependencies]
linera-sdk = { workspace = true, features = ["test"] }
webassembly-test = { workspace = true }


[[bin]]
name = "feed_contract"
path = "src/contract.rs"

[[bin]]
name = "feed_service"
path = "src/service.rs"
