[package]
name = "foundation"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql = { workspace = true, default-features = false }
async-trait = { workspace = true }
bcs = { workspace = true }
futures = { workspace = true }
linera-sdk = { workspace = true }
linera-views = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }

[dev-dependencies]
linera-sdk = { workspace = true, features = ["test"] }
webassembly-test = { workspace = true }

[[bin]]
name = "foundation_contract"
path = "src/contract.rs"

[[bin]]
name = "foundation_service"
path = "src/service.rs"
