[package]
name = "illustrator"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql = { workspace = true, default-features = false }
linera-sdk.workspace = true
candle-core.workspace = true
candle-transformers.workspace = true
candle-nn.workspace = true
getrandom.workspace = true
log.workspace = true
rand.workspace = true
serde.workspace = true
tokenizers.workspace = true
anyhow.workspace = true
image.workspace = true
tracing.workspace = true
base64.workspace = true

[dev-dependencies]
linera-sdk = { workspace = true, features = ["test"] }

[[bin]]
name = "illustrator_contract"
path = "src/contract.rs"

[[bin]]
name = "illustrator_service"
path = "src/service.rs"
