[package]
name = "copilot-service"
version = "0.1.0"
edition = "2021"

[dependencies]
local-ip-address = "0.6.1"
candle-core = { version = "0.6.0", default-features = false }
candle-transformers = "0.6.0"
candle-nn = "0.6.0"
anyhow = { version = "1", features = ["backtrace"] }
tokenizers = { git = "https://github.com/christos-h/tokenizers", default-features = false, features = ["unstable_wasm"] }
tracing = "0.1.40"
url = "2.2.2"
clap = { version = "4.2.4", features = ["derive"] }
hf-hub = "0.3.0"
serde_json = "1.0.114"

[features]
default = ["cuda"]
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
cudnn = ["candle-core/cudnn"]
