[package]
name = "illustrator_service"
version = "0.1.0"
edition = "2021"

[dependencies]
local-ip-address = "0.6.1"
candle-core = { version = "0.6.0", features = ["cuda", "cudnn"] }
candle-transformers = "0.6.0"
candle-nn = "0.6.0"
anyhow = { version = "1", features = ["backtrace"] }
image = { version = "0.25.2", default-features = false, features = ["jpeg", "png"] }
tokenizers = { git = "https://github.com/christos-h/tokenizers", default-features = false, features = ["unstable_wasm"] }
base64 = "0.13"
tracing = "0.1.40"
url = "2.2.2"
clap = { version = "4.2.4", features = ["derive"] }
hf-hub = "0.3.0"

[features]
default = []
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
cudnn = ["candle-core/cudnn"]
